# async-irc

./: .cz.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  codecov.yml  pyproject.toml  pytest.ini  release.sh  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml  renovate.json
.github/workflows/: codeql.yml  nitpick.yml  pre-commit-update.yml  publish.yaml  python-publish.yml  python-tests.yml
asyncirc/: __init__.py  irc.py  protocol.py  server.py
asyncirc/util/: __init__.py  backoff.py
tests/: __init__.py  parser_test.py  test_imports.py  test_protocol.py
